# timer

./: .qmlls.ini  CMakeLists.txt  CMakeLists.txt.user.c4112a4  First_page.qml  Main.qml  cppmodel.cpp  cppmodel.h  main.cpp  timer.cpp  timer.h
