cmake_minimum_required(VERSION 3.16)

project(timer_qt VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(QT_QML_GENERATE_QMLLS_INI ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)
find_package(Qt6 REQUIRED COMPONENTS Core)
find_package(Qt6 REQUIRED COMPONENTS Qml)
find_package(Qt6 REQUIRED COMPONENTS Core)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(apptimer_qt
    main.cpp
)

qt_add_qml_module(apptimer_qt
    URI timer_qt
    VERSION 1.0
    QML_FILES
        Main.qml
    SOURCES
        timer.h timer.cpp
    SOURCES
        cppmodel.h cppmodel.cpp
        QML_FILES
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(apptimer_qt PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.apptimer_qt
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(apptimer_qt
    PRIVATE Qt6::Quick
)
target_link_libraries(apptimer_qt PRIVATE Qt6::Core)
target_link_libraries(apptimer_qt  PRIVATE Qt6::Qml)
target_link_libraries(apptimer_qt PRIVATE Qt6::Core)


include(GNUInstallDirs)
install(TARGETS apptimer_qt
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
